# deepiri-dataset-processor

./: .gitignore  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml
scripts/: install.sh
src/deepiri_dataset_processor/: __init__.py  manifest.py
src/deepiri_dataset_processor/cleaning/: __init__.py  text_cleaner.py
src/deepiri_dataset_processor/deduplication/: __init__.py  exact_dedup.py  semantic_dedup.py
src/deepiri_dataset_processor/pipeline/: __init__.py  advanced_stages.py  base.py  orchestrator.py  presets.py  stages.py
src/deepiri_dataset_processor/quality/: __init__.py  checker.py
src/deepiri_dataset_processor/safety/: __init__.py  leakage_detector.py
src/deepiri_dataset_processor/streaming/: __init__.py  chunked_jsonl.py
src/deepiri_dataset_processor/versioning/: __init__.py  database.py  filesystem.py  models.py
tests/: conftest.py  test_exact_dedup.py  test_leakage_detector.py  test_manifest.py  test_pipeline.py  test_presets.py  test_quality.py  test_semantic_dedup.py  test_text_cleaner.py  test_versioning_database.py  test_versioning_filesystem.py
