[tool.poetry]
name = "deepiri-dataset-processor"
version = "0.2.0"
description = "Reusable data preprocessing: clean, dedup, safety-check, version, and manifest generation."
authors = ["Team Deepiri"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "deepiri_dataset_processor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.24.0 || ^2.1.0", optional = true }
sqlalchemy = { version = "^2.0.0", optional = true }
pydantic = { version = "^2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
ruff = "^0.8.0"
numpy = "^1.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"

[tool.poetry.extras]
semantic = ["numpy"]
versioning = ["sqlalchemy", "pydantic"]
all = ["numpy", "sqlalchemy", "pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
